ensure space for flash message on small screens

--- a/app/assets/stylesheets/widgets/_flash_message.scss
+++ b/app/assets/stylesheets/widgets/_flash_message.scss
@@ -7,6 +7,7 @@
     border: none;
     width: 95%;
     padding: 1% 3% 1% 2%;
+    margin: 0;
     top: $top_navigation_height;
     font-size: 110%;
     font-family: 'Open Sans Condensed', arial, sans-serif;
@@ -19,11 +20,12 @@
 }
 
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 600px) {
   .flash {
     &.alert {
       top: $top_navigation_min_height;
-      font-size: 80%;
+      font-size: $small;
+      .close { font-size: $normal; }
     }
   }
 }
@@ -31,7 +33,8 @@
 @media only screen and (max-width: 320px) {
   .flash {
     &.alert {
-      font-size: 60%;
+      font-size: $xxx_small;
+      .close { font-size: $x_small; }
     }
   }
 }  
